...
                            Label("刪除", systemImage: "trash")
                        }
                        
                        Button {
                            tagToEdit = tag
                        } label: {
                            Label("編輯", systemImage: "pencil")
                        }
                        .tint(.blue)
                    }
            }
        }
        .navigationTitle("標籤管理")
...
